[package]
name = "serde-nu"
version = "0.1.1"
edition = "2018"
description = "Turn any value into a nu-protocol::Value with serde"
license = "MIT"
repository = "https://github.com/lily-mara/serde-nu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nu-protocol = "0.34"
serde = "1"
thiserror = "1"
bigdecimal = "0.2"

[dev-dependencies]
insta = "1"
